--- a/templates/neofs-http.service.j2
+++ b/templates/neofs-http.service.j2
@@ -6,7 +6,7 @@ Requires=network.target
 
 [Service]
 Type=simple
-ExecStart={{ neofs_http__bin_path }}/neofs-http-gw --config {{ neofs_http__conf_dir }}/config.yaml
+ExecStart={{ neofs_http__bin_path }} --config {{ neofs_http__conf_dir }}/config.yaml
 User={{ neofs_http__user }}
 Group={{ neofs_http__group }}
 WorkingDirectory={{ neofs_http__conf_dir }}
